--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -18,6 +18,7 @@ nav {
 
 .write {
   border: 1px solid red;
+  display: flex;
   flex-direction: column;
   align-items: center;
   font-family: 'Source Sans 3', sans-serif;
